--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "prettier": "2.7.1"
   },
   "dependencies": {
+    "body-parser": "^1.20.1",
     "chai": "^4.3.6",
     "dotenv": "^16.0.3",
+    "express": "^4.18.2",
     "mocha": "^10.0.0",
     "supertest": "^6.2.4"
   }
